# ikob_fast

./: CONTRIBUTING.md  Dockerfile  OUTPUT.md  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  linting.yml
src/ikob/: async_writer.py  calculate_skims.py  chain_generator.py  citizens.py  combined_weights.py  competition.py  configuration_definition.py  constants.py  curve_attachment.py  datasource.py  deployment_opportunities.py  distribute_over_groups.py  employment_opportunities.py  fused_d4d7.py  generalised_travel_time.py  generalized_travel_time.py  geo_utils.py  geo_validate.py  group_distribution.py  ikobconfig.py  ikobrunner.py  ikobwizard.py  lazy_combined_weights.py  potential_companies.py  reachable_destinations.py  reachable_population.py  segs_mapping.py  single_weights.py  skims_provider.py  test_curve_attachment.py  test_geo_utils.py  test_tolerance_curves.py  tolerance_curves.py  tolerance_editor.py  urbanization_grade_to_parking_times.py  utils.py
src/ikob/config/: build.py  geo_validate.py  validate.py  widgets.py
tests/: README.md  __init__.py  test_chain_generator.py  test_config.py  test_end_to_end.py  test_group_distribution.py  test_urbanisation_grade_conversion.py
tests/e2e/: __init__.py  test_end_to_end.py
tests/eb-eindhoven/: eb-eindhoven.json
tests/eb-eindhoven/SEGS/: CBS_autos_per_huishouden.csv  GeenAuto.csv  GeenRijbewijs.csv  Stedelijkheidsgraad.csv  VoorkeurenGeenAuto.csv  WelAuto.csv
tests/eindhoven-500/: eindhoven-500.json
tests/integration/: test_chain_generator.py
tests/unit/: __init__.py  conftest.py  test_chain_generator.py  test_combined_weights.py  test_competition.py  test_config.py  test_constants.py  test_distribute_over_groups.py  test_employment_opportunities.py  test_generalized_travel_time.py  test_group_distribution.py  test_parking_cost_file.py  test_potential_companies.py  test_reachable_destinations.py  test_reachable_population.py  test_read_config_csv.py  test_single_weights_unit.py  test_urbanisation_grade_conversion.py
tests/vlaanderen/: hubset.csv  vlaanderen.json
tests/vlaanderen-with-parking-cost/: costs.csv  vlaanderen-with-parking-cost.json
tests/vlaanderen/SEGS/: CBS_autos_per_huishouden.csv  Stedelijkheidsgraad.csv  Voorkeuren.csv
(+830 files in other folders)
