[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ikob"
version = "1.0.0"
description = "IKOB"
readme = "README.md"
# In version 3.13.0 the GUI fails to launch: https://github.com/Stichting-CROW/ikob/issues/74.
requires-python = ">= 3.13.1"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "numpy",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pandas",
    "pytest",
    "ruff",
]

deploy = [
    "pyinstaller",
]

[project.scripts]
ikobconfig = "ikob:ikobconfig.main"
ikobrunner = "ikob:ikobrunner.main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
extend-exclude = [
    "documentation",
    "scripts",
]
# NOTE: The original source files contained various functions with
# highly nested for loops and if statements. The longer line length
# (slightly) improves their readability.
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "I",
]
